2007-09-25  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/component.py
	(BaseComponent.setup.setup_plugs): Only load up the registry if we
	actually have plugs to instantiate. Speeds up component start
	dramatically in the normal case of no plugs.

	Loading the registry should not be necessary at all; the manager
	should give the component all of the information that it needs so
	that it can find the plugs on the local filesystem.

2007-09-20  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/base.py:
	  Update a comment.
	* flumotion/manager/component.py:
	  Rearrange component attach and detach code to be clearer and saner.
	  Remove register/unregister from component heaven.
	* flumotion/manager/manager.py:
	  Call avatar.attached() directly from login code, so that we do all
	  this during login, rather than at various later points.
	* flumotion/manager/worker.py:
	  Remove a fixme, raise an exception if a duplicate worker somehow
	  gets into the heaven twice.
	* flumotion/test/test_manager_manager.py:
	  Update tests for avatars attaching during login.

	  Fixes #624.

2007-09-19  Michael Smith <msmith@fluendo.com>

	Patch by: daniel.hnn@gmail.com
	* flumotion/component/consumers/shout2/shout2.py:
	  Trivial fix to shout2 consumer to allow streaming to a non-localhost
	  server. Fixes #754.

2007-09-18  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/command/commands.py (do_avatar_action):
	Do not operate on non-existing components. Fixes #757.

	* flumotion/admin/command/main.py (parse_commands):
	Make command's flow part of the main deferred (and print traceback
	on errors, too). Fixes #727.

2007-09-18  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/admin.py:
	  Don't emit disconnected from the admin model unless we actually
	  managed to connect first.

2007-09-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_component.py (PipelineTest.connect_feeders):
	Stub out.

	* flumotion/manager/component.py