@@ -345,13 +345,10 @@ class AdminModel(medium.PingingMedium, signals.SignalMixin):
 
         # fixme: push the disconnect notification upstream
         def remoteDisconnected(remoteReference):
-            if self.state != 'disconnected':
-                self.debug("emitting disconnected")
-                self.state = 'disconnected'
-                self.emit('disconnected')
-                self.debug("emitted disconnected")
-            else:
-                self.debug("Already disconnected, not emitting disconnected")
+            self.debug("emitting disconnected")
+            self.state = 'disconnected'
+            self.emit('disconnected')
+            self.debug("emitted disconnected")
         self.remote.notifyOnDisconnect(remoteDisconnected)
 
         d = self.callRemote('getPlanetState')
